--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <h1>H<4</h1>
-
-<img src="img/img3.jpg" alt="sadd:(   ">
+<div class="d-flex p-2"> hardecki</div>
+<div class="mx-auto" style = "width:150px;"> <img src="img/img3.jpg" alt="sadd:(   "></div>
 
 <script src="js/bundle.min.js"></script>
 </body>
