--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="css/style.min.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>landing</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 </head>
 <body>
-<h1>H<4</h1>
-<div class="d-flex p-2"> hardecki</div>
-<div class="mx-auto" style = "width:150px;"> <img src="img/img3.jpg" alt="sadd:(   "></div>
-
+<div class = "resume">
+    <div class = "resume__container">
+        @@include('components/sidebar/sidebar.html')
+    </div>
+</div>
 <script src="js/bundle.min.js"></script>
 </body>
 </html>
