some changes in structure

--- a/app/index.html
+++ b/app/index.html
@@ -14,21 +14,26 @@
     <div class="row g-0 min-vh-100">
         <!-- Sidebar -->
         <div class="col-md-4 sidebar">
-            <div id="sidebar"> @@include('./components/sidebar/sidebar.html')</div>
+            <div id="sidebar">
+                @@include('./components/sidebar/sidebar.html')
+            </div>
         </div>
         <!-- Main Content -->
         <div class="col-md-8 main-content">
             <!-- Header -->
-            <div id="header">@@include('./components/header/header.html')</div>
+            <div id="header">
+                @@include('./components/header/header.html')
+            </div>
 
             <!-- Main Content -->
             <div id="main-content">
                 @@include('./components/main-content/main-body.html')
             </div>
 
-
             <!-- Footer -->
-            <div id="footer"> @@include('./components/footer/footer.html')</div>
+            <div id="footer">
+                @@include('./components/footer/footer.html')
+            </div>
         </div>
     </div>
 </div>
